--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "网页文本标记高亮工具",
   "main": "index.js",
   "scripts": {
+    "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -12,5 +13,22 @@
     "ts"
   ],
   "author": "张集伟",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.8.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.6",
+    "@babel/preset-typescript": "^7.8.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "gulp": "^4.0.2",
+    "gulp-if": "^3.0.0",
+    "rollup": "^1.32.0",
+    "through2": "^3.0.1",
+    "typescript": "^3.8.3",
+    "vinyl": "^2.2.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.8.4"
+  }
 }
