--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,16 @@
     "include":[
         "./src/**/*"
     ],
+    "exclude": [
+        "./scripts/**/*",
+        "gulpfile.js"
+    ],
     "compilerOptions": {
         "noImplicitAny": true,
         "target": "es5",
-        "lib": ["es2015", "DOM"]
+        "lib": ["es2015", "DOM"],
+        "checkJs": false,
+        "noEmit": true,
+        "declaration": true,
     }
 }
